--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+    overflow-y:hidden;
+}
+
 .App {
   background-color: #269;
   background-image: linear-gradient(#4aa1e0 2px, transparent 2px),
